# mimapr

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Element  Element.cpp  Element.h  Makefile  README.md  Schema  Schema.cpp  Schema.h  Solver.h  cmake_install.cmake  cub_20.txt  cub_40.txt  lab.cpp  lab3.cc  lab_plotter.py  lin_20.txt  lin_40.txt  main  main.cpp  mimapr  out.txt  plotter.py  sash.cpp  test  test.cpp
src/: Schema.h  Solver.h
